css/styles.css
:root {
	--background-color: url('../image/background-image.png');
	--text-color: #333	;
	--header-background-color: rgba(220, 243, 232, 0.7);
	--container-background-color: rgba(255, 255, 2	55, 0.8);
	--item-background-color: rgba(255, 255, 255, 0.7);
	--button-background-color: rgba(92, 155, 124, 0.7);	
	--progress-bar-color: rgba(70, 126, 98, 0.7);
	--search-box-color: white;
}		

[data-theme="dark"] {
	--background-color: url('../image/background-image-dark.png');
	--text-color: #f5f5f5;
	--header-background-color: rgba(0, 0, 0, 0.7);
	--container-background-color: rgba(50, 50, 50, 0.8);
	--item-background-color: rgba(50, 50, 50, 0.7);
	--button-background-color: rgba(50, 50, 50, 0.7);
	--progress-bar-color: #f5f5f5;
	--search-box-color: rgba(88, 88, 88, 0.7);
}

body {
	font-family: 'Arial', sans-serif;
	margin: 0;
	padding: 0;
	background: var(--background-color);
    background-position: top left;
    background-attachment: fixed;
    transition: filter 0.5s ease;
	color: var(--text-color);
}
header {
	background: var(--header-background-color);
	backdrop-filter: blur(10px);
	color: 	rgba(92, 155, 124, 0.7);	
	text-align: center;
	padding: 1rem 0;
	position: relative;
}
.header-buttons-area {
	height: 2rem;
}
.header-buttons {
	position: absolute;
	top: 1rem;
	display: flex;
	gap: 1rem;
}
.header-left {
	left: 1rem;
}
.header-right {
	right: 1rem;
}
.container {
	width: 90%;
	max-width: 1200px;
	margin: 2rem auto;
	padding: 1rem;
	background: var(--container-background-color);
	backdrop-filter: blur(5px);
	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
	border-radius: 8px;
}
.buttons {
	display: flex;
	justify-content: center;
	gap: 1rem;
	margin: 1rem 0;
}
.button {
	padding: 0.5rem 1rem;
	background: var(--button-background-color);
	color: white;
	border: none;
	border-radius: 5px;
	cursor: pointer;
}
.button:hover {
	background: rgba(0, 123, 255, 0.9);
}
#searchBox {
	display: block;
	padding: 0.5rem;
	margin-top: 1rem;
	width: calc(60% - 1rem);
	border-radius: 5px;
	border: none;
	background-color: var(--search-box-color);
}
#searchBox::placeholder {
	color: var(--text-color);
}
.song-list {
	display: flex;
	flex-wrap: wrap;
	list-style: none;
	padding: 0;
	margin: 0;
}
.song-item {
	flex: 1 1 calc(33.333% - 2rem);
	margin: 1rem;
	padding: 1rem;
	background: var(--item-background-color);
	backdrop-filter: blur(1px);
	border-radius: 8px;
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}
.song-title {
	font-size: 1.1rem;
	font-weight: bold;
}
.song-artist {
	color: #777;
}
.audio-player {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 0.5rem;
	margin-top: 1rem;
}
.audio-controls {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}
.progress-bar {
	width: 100%;
	height: 5px;
	background: var(--header-background-color);
	border-radius: 5px;
	overflow: hidden;
	cursor: pointer;
}
.progress {
	height: 100%;
	background: var(--progress-bar-color);
	width: 0;
}
@media (max-width: 600px) {
	.song-item {
		flex: 1 1 100%;
		margin: 0.5rem 0;
	}
	.song-title {
		font-size: 1rem;
	}
}
#singer {
	margin-bottom:5px;
}
#singer-details {
	margin-top:5px;
}
#pauseButton {
	display: none;
}
#stopButton{
	display: none;
}

